<resources>
    <string name="app_name">AOX3</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="An_error_occurred_try_again">An error occurred, try again.</string>
    <string name="Battery_too_low">Your battery is too low</string>
    <string name="Bluetooth_is_required_to_use_the_pax_app">Bluetooth is required to use the AOX3 app</string>
    <string name="Charging">Charging</string>
    <string name="Connected">Connected</string>
    <string name="Connecting">Connecting</string>
    <string name="Continue">continue</string>
    <string name="Default">Default</string>
    <string name="Disconnected">Disconnected</string>
    <string name="Generic">Generic</string>
    <string name="Home">Home</string>
    <string name="Launch">Launch</string>
    <string name="Next">Next</string>
    <string name="Ok">OK</string>
    <string name="PAX_uses_bluetooth_low_energy_which_maximizes_the_battery_life_in_order_to_use">AOX3 uses Bluetooth Low Energy, which maximizes the battery life. In order to use Bluetooth LE, Android requires that your location be enabled.</string>
    <string name="Peripheral">Peripheral</string>
    <string name="Peripheral_Session">Peripheral Session</string>
    <string name="The_battery_on_your_phone_is_too_low">The battery on your phone is too low. You are required to have %s%% battery or be plugged in to update.</string>
    <string name="Turn_your_PAX_on_by_pressing_the_mouthpiece">Turn your AOX3 on by pressing the mouthpiece.</string>
    <string name="Unable_to_scan_Bluetooth">Unable to scan for Bluetooth devices. Try again.</string>
    <string name="Your_battery_level_is_too_low_to_update_to_firmware">You are required to have more than %s%% battery to update.</string>
    <string name="Youve_successfully_entered_for_a_chance_to_win">"You've successfully entered for a chance to win!"</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="account">ACCOUNT</string>
    <string name="add_a_pax">ADD A AOX3</string>
    <string name="all_your_pax_products_live_here_tap_the_device_you_just_paired_to_get_started">"All your AOX3 products live here.
Tap the device you just paired to get started."</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="analytics_app_id">ddbfb99c42da42efb47644e9489df946</string>
    <string name="anonymously_record_your_usage_to">Anonymously share your app usage with us to help us troubleshoot and create the best possible experience for you.</string>
    <string name="app_update_description">To ensure the best possible AOX3 experience, please update to the latest version.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_to_delete_this_device">Are you sure you want to delete this device?</string>
    <string name="battery">battery</string>
    <string name="bluetooth_not_available_on_your_device">Bluetooth not available on your device.</string>
    <string name="boost">boost</string>
    <string name="boost_description">Stay hotter for longer, less auto-cooling</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brightness_num">LIGHT</string>
    <string name="c">Celsius</string>
    <string name="c_degrees">˚C</string>
    <string name="cdn_url">https://appmedia.pax.com/paxmobileapp/</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_your_pax">Choose your AOX3</string>
    <string name="cognito_id">us-east-1:239239cd-27c8-441b-bcd1-18f02a04745c</string>
    <string name="color_theme">COLOR THEME</string>
    <string name="color_theme_mode">COLOR STYLE</string>
    <string name="com.crashlytics.android.build_id">17415b71-6ea9-4448-be92-1751ce79bd92</string>
    <string name="delete">Delete</string>
    <string name="delete_device">Delete Device</string>
    <string name="description1">The AOX3 Vapor App is the best way to enhance your experiences with AOX3.</string>
    <string name="description2">"Customize your temperature settings to get the taste and vapor quality you've been waiting for."</string>
    <string name="description3">Customize your settings so that each session is tailored to you.</string>
    <string name="description4">Your privacy will never be compromised.</string>
    <string name="device_locked">DEVICE LOCKED</string>
    <string name="device_needs_do_be_updated_do_you_want_to_do_that_now">%s needs to be updated. Do you want to do that now?</string>
    <string name="device_unlocked">DEVICE UNLOCKED</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_connecting">Connecting…</string>
    <string name="dfu_disconnecting">Disconnecting</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_switch_to_dfu">Switching Modes</string>
    <string name="dfu_turn_on_your_pax">Turn on your AOX3 to begin using it</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_upload_progress">Progress: %s%% Complete</string>
    <string name="dfu_validating">Validating</string>
    <string name="dont_have_a_pax">"Don't have a AOX3?"</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="enable">Enable</string>
    <string name="enable_bluetooth_description">Bluetooth must be enabled to use your AOX3.</string>
    <string name="enable_bluetooth_title">Bluetooth is disabled.</string>
    <string name="enable_it_in_app_permissions">Enable it in app permissions</string>
    <string name="enter_your_email_below">Enter email below</string>
    <string name="error">Error</string>
    <string name="f">Fahrenheit</string>
    <string name="f_degrees">˚F</string>
    <string name="feedback_description">"We'd love to hear your thoughts. Care to let us know what went wrong?"</string>
    <string name="find_a_store">FIND A STORE</string>
    <string name="firmware">firmware</string>
    <string name="firmware_too_new">"Sorry, but to use that AOX3 you'll need the latest version of the app."</string>
    <string name="firmware_too_old">Your AOX3 needs to be updated with the latest firmware.</string>
    <string name="for_further_information_regarding_our_strict_privacy_policy_please_visit_pax_com_privacy">For further information regarding our strict privacy policy please visit: pax.com/privacy</string>
    <string name="game">GAME</string>
    <string name="get_started">Get Started</string>
    <string name="go_to_store">Go to the store to update</string>
    <string name="header1">Welcome</string>
    <string name="header2">The best vapor. Ever.</string>
    <string name="header3">Personalized sessions.</string>
    <string name="header4">Safe and secure.</string>
    <string name="help_us_keep_building_great_products">Help us keep building great products.</string>
    <string name="high">HIGH</string>
    <string name="host">https://api.pax.com</string>
    <string name="how_are_we_doing">How are we doing?</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_name_description">Invalid name, try something different.</string>
    <string name="is_not_a_valid_email_address">"'%s' is not a valid email address"</string>
    <string name="lets_get_you_started">"Let's get you started."</string>
    <string name="location_disabled">Location services must be enabled to pair a AOX3.</string>
    <string name="measurement">MEASUREMENT</string>
    <string name="remove_device">REMOVE DEVICE</string>
    <string name="shake_your_device_until">"Shake your %s until blue lights appear. We'll take care of the rest."</string>
    <string name="shop">SHOP</string>
    <string name="support">SUPPORT</string>
    <string name="url_locate_store">https://www.paxvapor.com/locate/</string>
    <string name="url_shopping">https://www.paxvapor.com/pax-2/#pax-2-accessories</string>
    <string name="url_support">https://www.paxvapor.com/support/</string>
    <string name="vibration">VIBRATION</string>
</resources>