<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/get_started_lin_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40.0dip"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lets_get_you_started" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_your_pax"
            android:textAllCaps="true"
            android:textSize="16.0sp" />

        <ImageView
            android:id="@+id/paxEraImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:scaleType="centerCrop"
            android:src="@mipmap/pax_era_getting_started" />

        <ImageView
            android:id="@+id/pax3Image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:scaleType="centerCrop"
            android:src="@mipmap/pax3_getting_started" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pair_lin_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:padding="15.0dip"
        android:visibility="gone">

        <TextView
            android:id="@+id/getting_started_line1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10.0dip"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/getting_started_name_your_pax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:imeActionLabel="Done"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="15"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textColor="#000000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/getting_started_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getting_started_line1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/shake_your_device_until"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16.0sp" />

        <ImageView
            android:id="@+id/pairImage"
            style="@style/PeripheralImage"
            android:layout_above="@+id/getting_started_name_your_pax"
            android:layout_below="@+id/getting_started_line2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40.0dip"
            android:src="@mipmap/pairing_era" />
    </RelativeLayout>

    <Button
        android:id="@+id/butDontHaveAPax"
        style="@style/BlackRoundedButton"
        android:layout_width="175.0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40.0dip"
        android:text="@string/dont_have_a_pax" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>