<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E5E5E5"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/setting_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:src="@mipmap/ic_go_back" />

        <TextView
            android:id="@+id/colorThemeHeader"
            style="@style/NavigationHeader2Item"
            android:layout_below="@+id/setting_back_iv"
            android:layout_marginTop="30dip"
            android:text="@string/color_theme_mode"
            android:textColor="#000000" />

        <RadioGroup
            android:id="@+id/colorThemeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/colorThemeHeader"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/theme_radio_button1"
                style="@style/ThemeRadioButton"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/theme_radio_button1"
                android:button="@android:color/transparent" />

            <RadioButton
                android:id="@+id/theme_radio_button2"
                style="@style/ThemeRadioButton"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/theme_radio_button4"
                android:button="@android:color/transparent" />

            <RadioButton
                android:id="@+id/theme_radio_button3"
                style="@style/ThemeRadioButton"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/theme_radio_button2"
                android:button="@android:color/transparent" />

            <RadioButton
                android:id="@+id/theme_radio_button4"
                style="@style/ThemeRadioButton"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/theme_radio_button3"
                android:button="@android:color/transparent" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_brightness"
            style="@style/NavigationHeader2Item"
            android:layout_below="@+id/colorThemeLayout"
            android:text="@string/brightness_num"
            android:layout_marginTop="30dp"
            android:textColor="#000000" />

        <RelativeLayout
            android:id="@+id/seekBar_brightness_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/tv_brightness"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp">

            <TextView
                android:id="@+id/seekbar_left_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:layout_centerVertical="true"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/seekbar_right_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="100%"
                android:layout_centerVertical="true"
                android:textColor="#000000"
                android:textSize="13sp" />

            <SeekBar
                android:id="@+id/seekBar_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/seekbar_right_tv"
                android:layout_toRightOf="@+id/seekbar_left_tv"
                android:max="254"
                android:progressTint="#000000"
                android:thumb="@drawable/radio_thumb" />

        </RelativeLayout>


        <TextView
            android:id="@+id/gameHeaderText"
            style="@style/NavigationHeader2Item"
            android:layout_below="@+id/seekBar_brightness_rl"
            android:text="@string/game"
            android:layout_marginTop="30dp"
            android:textColor="#000000" />


        <LinearLayout
            android:id="@+id/gameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gameHeaderText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/game1"
                style="@style/GameRadioButton"
                android:background="@drawable/game1_radio_button"
                android:padding="8dp"
                android:src="@mipmap/game_1"
                android:tag="\ 1" />

            <ImageView
                android:id="@+id/game2"
                style="@style/GameRadioButton"
                android:layout_marginLeft="50.0dip"
                android:background="@drawable/game1_radio_button"
                android:padding="8dp"
                android:src="@mipmap/game_2"
                android:tag="\ 2" />

            <ImageView
                android:id="@+id/game3"
                style="@style/GameRadioButton"
                android:layout_marginLeft="50.0dip"
                android:background="@drawable/game1_radio_button"
                android:padding="8dp"
                android:src="@mipmap/game_3"
                android:tag="\ 3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/gameLayout"
            android:layout_below="@+id/gameLayout"
            android:layout_marginTop="30.0dip"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hapticsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/vibration"
                    android:textColor="@android:color/black" />


                <LinearLayout
                    android:id="@+id/butHapticsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gameHeaderText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/haptics1"
                        style="@style/GameRadioButton"
                        android:background="@drawable/game1_radio_button"
                        android:gravity="center"
                        android:tag="\ 1"
                        android:text="OFF"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/haptics2"
                        style="@style/GameRadioButton"
                        android:layout_marginLeft="50.0dip"
                        android:background="@drawable/game1_radio_button"
                        android:gravity="center"
                        android:tag="\ 2"
                        android:text="MED"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/haptics3"
                        style="@style/GameRadioButton"
                        android:layout_marginLeft="50.0dip"
                        android:background="@drawable/game1_radio_button"
                        android:gravity="center"
                        android:tag="\ 3"
                        android:text="HIGTH"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30.0dip">

                <TextView
                    android:id="@+id/lockDeviceHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/device_unlocked"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:id="@+id/lockDevice_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lockDeviceHeader"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lockDevice1"
                        style="@style/GameRadioButton"
                        android:background="@drawable/game1_radio_button"
                        android:gravity="center"
                        android:tag="\ 2"
                        android:text="OFF"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/lockDevice2"
                        style="@style/GameRadioButton"
                        android:layout_marginLeft="70.0dip"
                        android:background="@drawable/game1_radio_button"
                        android:gravity="center"
                        android:tag="\ 3"
                        android:text="ON"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_removeDevice"
                style="@style/RedRoundedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:text="@string/remove_device" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>